# sof

./: west.yml
lmdk/cmake/: build.cmake
lmdk/include/rtos/: panic.h
lmdk/include/sof/math/: numbers.h
posix/include/rtos/: interrupt.h
scripts/: xtensa-build-zephyr.py
src/audio/: base_fw.c  chain_dma.c  component.c  dai-zephyr.c
src/audio/copier/: copier.c
src/audio/eq_iir/: eq_iir_generic.c
src/audio/eq_iir/tune/: sof_mls_freq_resp.m  (+4 more)
src/audio/mixin_mixout/: mixin_mixout.c
src/audio/module_adapter/: module_adapter.c  module_adapter_ipc4.c
src/audio/phase_vocoder/: phase_vocoder.c
src/audio/pipeline/: pipeline-schedule.c
src/audio/smart_amp/: smart_amp.c  smart_amp_maxim_dsm.c
src/audio/up_down_mixer/: up_down_mixer.c
src/audio/volume/: volume.c  volume_hifi3.c  volume_hifi4.c  volume_hifi4_with_peakvol.c  volume_hifi5.c  volume_hifi5_with_peakvol.c
src/drivers/: interrupt.c
src/include/ipc4/: module.h
src/init/: init.c
src/ipc/: ipc-common.c  ipc-zephyr.c
src/ipc/ipc4/: helper.c
src/platform/posix/: ipc.c
src/samples/audio/: smart_amp_test_ipc3.c
src/schedule/: dma_multi_chan_domain.c  ll_schedule_xtos.c  schedule.c  zephyr_dma_domain.c  zephyr_domain.c  zephyr_dp_schedule.c  zephyr_ll.c
src/trace/: dma-trace.c
tools/ctl/: CMakeLists.txt
tools/rimage/config/: nvl.toml.h
tools/test/audio/: process_test.m  tdfb_direction_test.m  tdfb_test.m
tools/topology/topology2/: cavs-sdw.conf
zephyr/: CMakeLists.txt  edf_schedule.c  wrapper.c
zephyr/include/rtos/: interrupt.h
zephyr/lib/: alloc.c  cpu.c
(+21 files in other folders)
